--- a/styles/hero.css
+++ b/styles/hero.css
@@ -2,6 +2,10 @@ section.hero {
     padding: 2.5rem 2rem;
     margin-inline: auto;
 
+    & h1 {
+        max-width: 40rem;
+    }
+
     & h1 div {
         display: inline-block;
         overflow: hidden;
@@ -10,39 +14,145 @@ section.hero {
         vertical-align: bottom;
     }
 
-    h1 span:nth-child(1) {
+    & h1 span:nth-child(1) {
         color: var(--snitap-sky-mid);
     }
 
-    h1 span:nth-child(2) {
+    & h1 span:nth-child(2) {
         color: var(--snitap-joy-mid);
     }
 
-    h1 span:nth-child(3) {
+    & h1 span:nth-child(3) {
         color: var(--snitap-leaf-mid);
     }
-    h1 span:nth-child(4) {
-      color: var(--snitap-sky-mid);
+
+    & h1 span:nth-child(4) {
+        color: var(--snitap-sky-mid);
     }
 
-    h1 span{
+    & h1 span {
         display: block;
-        animation: slide-up 6s infinite;
+        animation: slide-up 6s infinite ease;
     }
+
+
+    /*BUTTONS*/
+    .buttons {
+        display: flex;
+        gap: 2rem;
+        margin-top: 17.8rem;
+
+        & .button {
+            display: flex;
+            gap: 0.75rem;
+            align-items: center;
+
+            border-radius: 5rem;
+            transition: scale 350ms;
+
+            &.buy {
+                padding: 1.5rem 3rem;
+                background-color: var(--snitap-sun);
+            }
+
+            &.play span {
+                padding: 1.5rem;
+                border-radius: 50%;
+                background-color: white;
+                display: flex;
+            }
+
+
+
+
+
+            &:hover {
+                scale: 1.1;
+            }
+
+        }
+
+
+
+        & .shadow {
+            box-shadow:
+                0 2px 5px rgb(0 0 0/ .1),
+                0 9px 9px rgb(0 0 0/ .09),
+                0 9px 9px rgb(0 0 0/ .05),
+                0 36px 15px rgb(0 0 0/ .01);
+
+        }
+    }
+
+
 }
 
 @keyframes slide-up {
 
     0%,
     22% {
-        transform:translateY(0);
+        transform: translateY(0);
+    }
+
+    23% {
+        transform: translateY(calc(-5rem - 15px));
+    }
+
+    25% {
+        transform: translateY(calc(-5rem + 10px));
+    }
+
+    27% {
+        transform: translateY(calc(-5rem - 5px));
+    }
+
+    29% {
+        transform: translateY(calc(-5rem + 5px));
     }
 
     33%,
-    55% {transform: translateY(-5rem);}
+    55% {
+        transform: translateY(-5rem);
+    }
+
+    56% {
+        transform: translateY(calc(-10rem - 15px));
+    }
+
+    58% {
+        transform: translateY(calc(-10rem + 10px));
+    }
+
+    60% {
+        transform: translateY(calc(-10rem - 5px));
+    }
+
+    62% {
+        transform: translateY(calc(-10rem + 5px));
+    }
 
     66%,
-    88% {transform: translateY(-10rem);}
+    88% {
+        transform: translateY(-10rem);
+
+
+    }
+
+    89% {
+        transform: translateY(calc(-15rem - 15px));
+    }
+
+    91% {
+        transform: translateY(calc(-15rem + 10px));
+    }
+
+    93% {
+        transform: translateY(calc(-15rem - 5px));
+    }
+
+    95% {
+        transform: translateY(calc(-15rem + 5px));
+    }
 
     100% {
         transform: translateY(-15rem);
