--- a/styles/header.css
+++ b/styles/header.css
@@ -5,6 +5,7 @@ header {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    margin-inline: auto;
 
     img {
         width: 2rem;
