--- a/styles/hero.css
+++ b/styles/hero.css
@@ -1,6 +1,12 @@
 section.hero {
+    max-width: 80rem;
+    width: 100%;
     padding: 2.5rem 2rem;
     margin-inline: auto;
+    overflow: hidden;
+    display: flex;
+    justify-content: space-between;
+    
 
     & h1 {
         max-width: 40rem;
@@ -37,7 +43,7 @@ section.hero {
 
 
     /*BUTTONS*/
-    .buttons {
+    & .buttons {
         display: flex;
         gap: 2rem;
         margin-top: 17.8rem;
@@ -84,7 +90,86 @@ section.hero {
         }
     }
 
+    /*patins*/
+    &>div:nth-child(2) {
+        width: 30.5rem;
+        height: 30.5rem;
 
+        position: relative;
+
+
+        & .content {
+            width: 100%;
+            height: 100%;
+            /* border: 1px solid black; */
+
+            & img {
+                width: 100%;
+                position: absolute;
+
+            }
+
+            & img[src*="ellipse"] {
+                width: 94%;
+                top: 3%;
+                left: 2%;
+
+                transform: translateX(200%);
+                animation: slide-in 3s 200ms ease forwards;
+
+            }
+
+            & img[src*="patins"] {
+                z-index: 1;
+            
+                transform: translateX(200%);
+                animation: slide-in 3s ease forwards;
+            }
+
+            & img[src*="stars-1"] {
+                z-index: 0;
+                max-width: 5.5rem;
+                top: 30%;
+                opacity: 0;
+                transform: translateX(400%);
+                animation: slide-in 2s 800ms ease both, appear 100ms 800ms both;
+            }
+
+            & img[src*="stars-2"] {
+                max-width: 2.5rem;
+                bottom:35%;
+                right: 0;
+                opacity: 0;
+                transform: translateX(400%);
+                animation: slide-in 1s ease both,appear 2.2s 800ms ease both;
+            }
+
+
+
+        }
+    }
+
+}
+@media (width <= 70rem) {
+    section.hero{
+        flex-direction: column;
+    }
+}
+
+@keyframes slide-in {
+    56% {
+        transform: translateX(-20px);
+    }
+
+    100% {
+        transform: translateX(0);
+    }
+}
+
+@keyframes appear {
+    to{
+        opacity: 100%;
+    }
 }
 
 @keyframes slide-up {
