--- a/styles/hero.css
+++ b/styles/hero.css
@@ -157,16 +157,111 @@ section.hero {
         flex-direction: column-reverse;
 
 
-        & .buttons {
+        
+
+        &>div:nth-child(1) {
+            width: 19.5rem;
+            height: 18.5rem;
+
+            & h1 div {
+                height: 2.5rem;
+            }
+
+            & h1 {
+                font-size: 2rem;
+            }
+
+            & h1 span {
+                display: block;
+                animation: slide-up-mobile 6s infinite ease;
+            }
+            & .buttons {
+            flex-direction: column-reverse;
             margin-top: 3rem;
             display: grid;
             gap: 2rem;
+           
+
+        }
 
         }
 
         &>div:nth-child(2) {
             width: 19.5rem;
             height: 19.5rem;
+        }
+
+    }
+
+    @keyframes slide-up-mobile {
+
+        0%,
+        22% {
+            transform: translateY(0);
+        }
+
+        23% {
+            transform: translateY(calc(-2.5rem - 15px));
+        }
+
+        25% {
+            transform: translateY(calc(-2.5rem + 10px));
+        }
+
+        27% {
+            transform: translateY(calc(-2.5rem - 5px));
+        }
+
+        29% {
+            transform: translateY(calc(-2.5rem + 5px));
+        }
+
+        33%,
+        55% {
+            transform: translateY(-2.5rem);
+        }
+
+        56% {
+            transform: translateY(calc(-5rem - 15px));
+        }
+
+        58% {
+            transform: translateY(calc(-5rem + 10px));
+        }
+
+        60% {
+            transform: translateY(calc(-5rem - 5px));
+        }
+
+        62% {
+            transform: translateY(calc(-5rem + 5px));
+        }
+
+        66%,
+        88% {
+            transform: translateY(-5rem);
+
+
+        }
+
+        89% {
+            transform: translateY(calc(-7.5rem - 15px));
+        }
+
+        91% {
+            transform: translateY(calc(-7.5rem + 10px));
+        }
+
+        93% {
+            transform: translateY(calc(-7.5rem - 5px));
+        }
+
+        95% {
+            transform: translateY(calc(-7.5rem + 5px));
+        }
+
+        100% {
+            transform: translateY(-7.5rem);
         }
 
     }
